--- a/index.html
+++ b/index.html
@@ -10,14 +10,18 @@
       href="https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css">
+    <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.js"></script>
+    <link
+      rel="stylesheet"
+      href="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-directions/v4.1.0/mapbox-gl-directions.css"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="style.css" />
 
     <title>Mapbox training</title>
   </head>
   <body>
-    <div id='map' ></div>
-    <script src="app.js">
-    
-    </script>
+    <div id="map"></div>
+    <script src="app.js"></script>
   </body>
 </html>
